# dimatech

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPROVEMENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
migrations/: alembic.ini  env.py
migrations/versions/: 001_initial.py
scripts/: seed.py
src/: container.py  main.py
src/application/: dto.py  errors.py
src/application/use_cases/: admin.py  auth.py  payment.py  user.py
src/domain/: entities.py  interfaces.py  value_objects.py
src/infrastructure/: config.py
src/infrastructure/auth/: jwt_service.py  password_service.py  secret_key_provider.py
src/infrastructure/database/: connection.py  models.py  repositories.py  unit_of_work.py
src/presentation/: cors.py  errors.py  middleware.py  rate_limiter.py  utils.py
src/presentation/routes/: admin.py  auth.py  payment.py  user.py
tests/: conftest.py
tests/e2e/: test_api.py
tests/integration/: test_repositories.py
tests/unit/test_domain/: test_entities.py  test_value_objects.py
tests/unit/test_use_cases/: test_usecases.py
